refactor(many): modify wording

--- a/src/i18n/locales/ar/conditions.json
+++ b/src/i18n/locales/ar/conditions.json
@@ -29,7 +29,7 @@
   "yourInformation": "المعلومات الخاصة بك",
   "inAdditionToYourObligation": "بالإضافة إلى التزامك بالتسجيل كعميل لـ WCG ، فإنك توافق على ضمان أن جميع المعلومات التي تقدمها إلى WCG كاملة ودقيقة إلى الحد الذي تعرفه وتعتقده. أنت توافق على إخطار WCG فورًا بأي تغييرات في المعلومات التي تقدمها ، بحيث يمكن لـ WCG تحديث السجلات في الوقت المناسب وتعكس بدقة الموقف الأخير.",
   "companyInformation": "معلومات الشركة",
-  "WCGInternational": "WCG Markets Ltd",
+  "WCGInternational": "WCG Group Ltd",
   "disputeSettlement": "تسوية المنازعات",
   "weWelcomeYourInvaluableComments": "نحن نرحب بتعليقاتكم القيمة. وإذا خطر ببالكم أي شيء يمكن أن يحسن من خدماتنا، الرجاء إعلامنا بذلك. وبغض النظر عما إذا كان إقتراحاً أو إطراء أو شكوى، فإن ملاحظاتكم هي مفتاح تحسين منتجاتنا وخدماتنا.",
   "ifYouNeedAnyAssistance": "للحصول على المساعدة ، يرجى الاتصال بموظفي خدمة العملاء عبر الإنترنت على مدار 24 ساعة",
