--- a/src/i18n/locales/ar/contactUs.json
+++ b/src/i18n/locales/ar/contactUs.json
@@ -43,18 +43,18 @@
   "invitedToParticipate": "تمت دعوتهم للمشاركة في معرض شنغهاي المالي الصيني السادس عشر ، وقبول المقابلات الإعلامية.",
   "partneredWith": "شراكة مع تاجر محلي مرخص معروف في إندونيسيا - شركة Central Capital Futures Co.، Ltd. ، ودخلت رسميًا رابع أكبر سوق في العالم.",
   "awardedTheMostInvestorTrusted": "حصل على جائزة تاجر المعادن النفيسة الأكثر ثقة من قبل المستثمرين.",
-  "WCGMarketsLtdObtained": "حصلت WCG Markets Ltd على ترخيص هيئة الخدمات المالية في سانت فنسنت وجزر غرينادين (SVGFSA) برقم 126087 قبل الميلاد 2020.",
+  "WCGMarketsLtdObtained": "حصلت WCG Group Ltd على ترخيص هيئة الخدمات المالية في سانت فنسنت وجزر غرينادين (SVGFSA) برقم 126087 قبل الميلاد 2020.",
   "establishedMalaysia": "إنشاء مكتب الاتصال الماليزي.",
   "setUpTaiwan": "قم بإعداد مكتب الاتصال التايواني.",
   "aLeaderInTheIndustry": "انضم السيد Wu Guoqiang ، الرائد في الصناعة ، إلى قواه وهو مسؤول عن إدارة مراقبة ومراقبة المخاطر. السيد Wu حاصل على درجة الماجستير في التمويل وعدد من المؤهلات المهنية الدولية. شغل منصب كبير المتداولين ورئيس قسم إدارة المخاطر في العديد من البنوك العالمية.",
-  "WCGMarketsLtdObtainedTheFINTRAC": "حصلت WCG Markets Ltd على ترخيص FINTRAC MSB من كندا ، والرقم هو M20282836.",
+  "WCGMarketsLtdObtainedTheFINTRAC": "حصلت WCG Group Ltd على ترخيص FINTRAC MSB من كندا ، والرقم هو M20282836.",
   "startCharityProjects": "بدء المشاريع الخيرية ، والمشاركة بنشاط في المشاريع الخيرية التعليمية والطبية ، والسعي لتصبح شركة مواطنة جيدة ورد الجميل للمجتمع.",
   "integrateAndUpdate": "دمج وتحديث العلامة التجارية. اعتماد شعارات وشعارات جديدة ، وكذلك إطلاق صفحة ويب جديدة بعدة لغات لتسهيل المستثمرين الدوليين.",
   "theTradingSystem": "تمت ترقية نظام التداول ، وإطلاق المزيد من المنتجات الجديدة ، مثل الأسهم الأمريكية ، والعملات المشفرة ، وما إلى ذلك ، لتحسين تجربة الاستثمار للعملاء.",
   "focusingOn": "مع التركيز على التعليم الريفي الجيد ، فإننا نرعى بشكل خاص مشروع Zhixing Book Corner 21-22 لمؤسسة Zhixing Education Foundation. تشير التقديرات إلى أنه سيكون هناك ما لا يقل عن 6 مدارس ابتدائية ويمكن للآلاف من طلاب المدارس الابتدائية الاستفادة منها.",
   "WCGIFXEXPO": "WCG & IFX EXPO",
-  "TheStrengthOfWCGMarketsIsReconfirmed": "تم التأكيد مجددًا على قوة WCG Markets على أن القدرات الإدارية لوظائف منصة التداول الإلكترونية أعلى من المستوى القياسي ، وقد اجتازت اختبار التقييم وأكملت بنجاح المشاريع المحددة وإجراءات التقييم. الحصول على شارة GTP المعتمدة لجمعية تجارة الذهب والفضة.",
-  "WCGMarketsWonTheThirdPlace": "فازت WCG Markets بالمركز الثالث في أعلى تبرع خيري من شركة هونغ كونغ في عام 2021. هذا الشرف هو تأكيد كامل لإنجازات WCG Markets المتميزة في مجال الرعاية العامة.",
+  "TheStrengthOfWCGMarketsIsReconfirmed": "تم التأكيد مجددًا على قوة WCG Group على أن القدرات الإدارية لوظائف منصة التداول الإلكترونية أعلى من المستوى القياسي ، وقد اجتازت اختبار التقييم وأكملت بنجاح المشاريع المحددة وإجراءات التقييم. الحصول على شارة GTP المعتمدة لجمعية تجارة الذهب والفضة.",
+  "WCGMarketsWonTheThirdPlace": "فازت WCG Group بالمركز الثالث في أعلى تبرع خيري من شركة هونغ كونغ في عام 2021. هذا الشرف هو تأكيد كامل لإنجازات WCG Group المتميزة في مجال الرعاية العامة.",
   "BusinessExpansionTechnologyUpgrade": "توسيع الأعمال ، ترقية التكنولوجيا ، الاستحواذ على خادم تداول ASA ، لتزويد العملاء ببيئة تداول أكثر تفوقًا.",
-  "WCGMarketsAcquired": "استحوذت WCG Markets على مؤسستين ماليتين مشهورتين \"Wealth Gold Group\" و \"KUJI\" ، مما وضع أساسًا جيدًا للتنمية المستقبلية."
+  "WCGMarketsAcquired": "استحوذت WCG Group على مؤسستين ماليتين مشهورتين \"Wealth Gold Group\" و \"KUJI\" ، مما وضع أساسًا جيدًا للتنمية المستقبلية."
 }
