--- a/src/i18n/locales/en/conditions.json
+++ b/src/i18n/locales/en/conditions.json
@@ -29,7 +29,7 @@
   "yourInformation": "Your information",
   "inAdditionToYourObligation": "In addition to your obligation to register as a customer of WCG, you agree to ensure that all information you provide to WCG is complete and accurate to the extent you know and believe. You agree to notify WCG immediately of any changes in the information you provide, so that WCG can update records in a timely manner and accurately reflect the latest situation.",
   "companyInformation": "Company Information",
-  "WCGInternational": "WCG Markets Ltd",
+  "WCGInternational": "WCG Group Ltd",
   "disputeSettlement": "Dispute Settlement",
   "weWelcomeYourInvaluableComments": "We welcome your invaluable comments. If anything could improve our service comes to your mind, please let us know. Whether it is a suggestion, compliment or complaint, your feedback is the key to improving our products and services.",
   "ifYouNeedAnyAssistance": "For assistance, please contact the 24-hours online customer service staff ",
