--- a/src/i18n/locales/en/contactUs.json
+++ b/src/i18n/locales/en/contactUs.json
@@ -43,18 +43,18 @@
   "invitedToParticipate": "Invited to participate in the 16th China Shanghai Financial Expo, accepting media interviews.",
   "partneredWith": "Partnered with a well-known local licensed dealer in Indonesia – Central Capital Futures Co., Ltd., officially entering the fourth largest market in the world.",
   "awardedTheMostInvestorTrusted": "Awarded the Most Investor Trusted Precious Metal Dealer of the Year.",
-  "WCGMarketsLtdObtained": "WCG Markets Ltd obtained the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) license with the number 126087 BC 2020.",
+  "WCGMarketsLtdObtained": "WCG Group Ltd obtained the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) license with the number 126087 BC 2020.",
   "establishedMalaysia": "Established Malaysia Liaison Office.",
   "setUpTaiwan": "Set up Taiwan Liaison Office.",
   "aLeaderInTheIndustry": "Mr. Wu Guoqiang, a leader in the industry, joined forces and is responsible for the risk control and monitoring department. Mr. Wu has a master's degree in finance and a number of international professional qualifications. He has served as chief trader and head of risk management department of many world-class banks.",
-  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Markets Ltd obtained the FINTRAC MSB license of Canada, the number is M20282836.",
+  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Group Ltd obtained the FINTRAC MSB license of Canada, the number is M20282836.",
   "startCharityProjects": "Start charity projects, actively participate in education and medical charity projects, and strive to become a good corporate citizen and give back to the society.",
   "integrateAndUpdate": "Integrate and update the brand. Adopting new logos and slogans, and also grandly launching a new webpage with multiple languages ​​to facilitate international investors.",
   "theTradingSystem": "The trading system is upgraded, and more new products are launched, such as US stocks, etc., to optimize the investment experience of customers.",
   "focusingOn": "Focusing on rural quality education, we specially sponsor the Zhixing Education Foundation's 21-22 Zhixing Book Corner Project. It is estimated that there will be at least 6 primary schools and thousands of primary school students can benefit from it.",
   "WCGIFXEXPO": "WCG & IFX EXPO",
-  "TheStrengthOfWCGMarketsIsReconfirmed": "The strength of WCG Markets is reconfirmed that the management capabilities of the electronic trading platform functions are above the standard level, and it has passed the assessment test and successfully completed the designated projects and assessment procedures. Obtained the GTP Certified badge of the Gold and Silver Trade Association.",
-  "WCGMarketsWonTheThirdPlace": "WCG Markets won the third place in the highest charitable donation of a Hong Kong company in 2021. This honor is a full affirmation of WCG Markets' outstanding public welfare achievements.",
+  "TheStrengthOfWCGMarketsIsReconfirmed": "The strength of WCG Group is reconfirmed that the management capabilities of the electronic trading platform functions are above the standard level, and it has passed the assessment test and successfully completed the designated projects and assessment procedures. Obtained the GTP Certified badge of the Gold and Silver Trade Association.",
+  "WCGMarketsWonTheThirdPlace": "WCG Group won the third place in the highest charitable donation of a Hong Kong company in 2021. This honor is a full affirmation of WCG Markets' outstanding public welfare achievements.",
   "BusinessExpansionTechnologyUpgrade": "Business expansion, technology upgrade, acquisition of ASA trading server, to provide customers with a more superior trading environment.",
-  "WCGMarketsAcquired": "WCG Markets acquired two well-known financial institutions \"Wealth Gold Group\" and \"KUJI\", laying a good foundation for future development."
+  "WCGMarketsAcquired": "WCG Group acquired two well-known financial institutions \"Wealth Gold Group\" and \"KUJI\", laying a good foundation for future development."
 }
