--- a/src/i18n/locales/en/questions.json
+++ b/src/i18n/locales/en/questions.json
@@ -2,9 +2,9 @@
   "questions": "Questions",
   "thisArticleCollects": "This article collects most questions investors often ask, and hope you can find those answers useful.",
   "whatKindOfSupervision": "What kind of supervision WCG is regulated?",
-  "WCGIsABusinessBrand": "WCG Markets Ltd is a business brand used by multiple companies, including",
-  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd is supervised by the Canadian Financial Intelligence Unit (FIU) and the Canadian Financial Transaction and Reporting Analysis Center (FINTRAC). The MSB license number is M20282836.",
-  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd is registered under the International Business Law and is regulated by the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA), numbered 26087 BC 2020.",
+  "WCGIsABusinessBrand": "WCG Group Ltd is a business brand used by multiple companies, including",
+  "WCGMarketsLtdIsSupervised": "WCG Group Ltd is supervised by the Canadian Financial Intelligence Unit (FIU) and the Canadian Financial Transaction and Reporting Analysis Center (FINTRAC). The MSB license number is M20282836.",
+  "WCGMarketsLtdIsRegistered": "WCG Group Ltd is registered under the International Business Law and is regulated by the Saint Vincent and the Grenadines Financial Services Authority (SVGFSA), numbered 26087 BC 2020.",
   "HowToOpenAnAccountInWCG": "How to open an account in WCG?",
   "youCanRegisterYourRealAccount": "You can register your real account on the official website of WCG, or click here to register.",
   "WCGAccountOpeningAge": "WCG account opening age",
