--- a/src/i18n/locales/ms/notice.json
+++ b/src/i18n/locales/ms/notice.json
@@ -14,7 +14,7 @@
   "handlingMethod": "Kaedah pengendalian",
   "ifTheAccount": "Sekiranya akaun tersebut disahkan diperdagangkan dengan transaksi yang tidak normal, syarikat akan segera membekukan akaun tersebut, semua deposit dan pengeluaran akan dilarang sehingga siasatan dilakukan.",
   "ifTheAccountIs": "Sekiranya akaun tersebut disahkan mempunyai urus niaga yang tidak normal, syarikat akan menutup akaun tersebut dan mengembalikan baki dana kepada pelanggan, sebarang keuntungan dan komisen yang timbul daripada transaksi tidak normal akan dibatalkan.",
-  "theRightToInterpret": "Hak untuk menafsirkan \"transaksi tidak normal\" dimiliki oleh WCG Markets Ltd. dan jika ada perselisihan, WCG Markets Ltd berhak untuk mengubah suai.",
+  "theRightToInterpret": "Hak untuk menafsirkan \"transaksi tidak normal\" dimiliki oleh WCG Group Ltd. dan jika ada perselisihan, WCG Group Ltd berhak untuk mengubah suai.",
   "tradeDetails": "Butiran Perdagangan",
   "sourceOfTradeExecution": "Sumber Pelaksanaan Perdagangan",
   "theQuotesOfOur": "Harga produk kami umumnya berasal dari beberapa Bank teratas di dunia yang menawarkan harga yang besar dan tepat pada masanya untuk pasaran. Kami yakin bahawa pendekatan ini akan selalu memberikan anda harga yang terbaik.",
