--- a/src/i18n/locales/th/about.json
+++ b/src/i18n/locales/th/about.json
@@ -4,7 +4,7 @@
   "registerARealAccountNow": "ลงทะเบียนบัญชีผู้ใช้ตอนนี้",
   "registerADemoAccountNow": "ลงทะเบียนบัญชีทดลองตอนนี้",
   "strictlyRegulatedAndTrustworthy": "ควบคุมอย่างเข้มงวดและเชื่อถือได้",
-  "WCGInternational": "WCG Markets Ltd เป็นแบรนด์การลงทุนทางการเงินระดับมืออาชีพที่ก่อตั้งขึ้นในประเทศเซนต์วินเซนต์และเกรนาดีนส์ ซึ่งอยู่ภายใต้กฎหมายและระเบียบข้อบังคับที่เข้มงวด และจดทะเบียนตามกฎหมายบริษัทธุรกิจระหว่างประเทศ (BCN: 25293 BC 2019) โดยมีกฎระเบียบที่เข้มงวดเพื่อปกป้องผลประโยชน์ของนักลงทุน",
+  "WCGInternational": "WCG Group Ltd เป็นแบรนด์การลงทุนทางการเงินระดับมืออาชีพที่ก่อตั้งขึ้นในประเทศเซนต์วินเซนต์และเกรนาดีนส์ ซึ่งอยู่ภายใต้กฎหมายและระเบียบข้อบังคับที่เข้มงวด และจดทะเบียนตามกฎหมายบริษัทธุรกิจระหว่างประเทศ (BCN: 25293 BC 2019) โดยมีกฎระเบียบที่เข้มงวดเพื่อปกป้องผลประโยชน์ของนักลงทุน",
   "tradingProducts": "ซื้อขายสินค้า",
   "tradingPlatform": "แพลตฟอร์มการซื้อขาย",
   "platformHasWonManyAwards": "แพลตฟอร์มได้รับรางวัลมากมาย",
@@ -16,7 +16,7 @@
   "excellentCustomerService": "การบริการลูกค้าที่ดีเยี่ยม",
   "provideServices": "ให้บริการต่างๆ เช่น การดำเนินการที่ยอดเยี่ยม ใบเสนอราคาที่โปร่งใส เครื่องมือคุณภาพสูง ข่าวการตลาด และความรู้ระดับมืออาชีพ เพื่อให้ผู้ใช้ได้รับประโยชน์ที่เป็นไปได้มากขึ้น",
   "diversifiedProducts": "ผลิตภัณฑ์ที่หลากหลาย สร้างอนาคต",
-  "WCGProvides24Hours": "WCG Markets Ltd ให้บริการซื้อขายผลิตภัณฑ์ทางการเงินทั่วโลกออนไลน์ตลอด 24 ชั่วโมงสำหรับการแลกเปลี่ยนเงินตราต่างประเทศ ดัชนี พลังงาน สินค้าโภคภัณฑ์ สกุลเงินคริปโต และ CFD อื่นๆ สำหรับลูกค้าทั่วโลก ด้วยผลิตภัณฑ์ที่มีการแข่งขันสูง เทคโนโลยีชั้นนำที่ยอดเยี่ยม และบริการระดับมืออาชีพและมีน้ำใจ เราให้บริการลูกค้าด้วยประสบการณ์การค้าและการลงทุนระดับสูงสุด และบรรลุเป้าหมายของการเพิ่มพูนความมั่งคั่ง",
+  "WCGProvides24Hours": "WCG Group Ltd ให้บริการซื้อขายผลิตภัณฑ์ทางการเงินทั่วโลกออนไลน์ตลอด 24 ชั่วโมงสำหรับการแลกเปลี่ยนเงินตราต่างประเทศ ดัชนี พลังงาน สินค้าโภคภัณฑ์ สกุลเงินคริปโต และ CFD อื่นๆ สำหรับลูกค้าทั่วโลก ด้วยผลิตภัณฑ์ที่มีการแข่งขันสูง เทคโนโลยีชั้นนำที่ยอดเยี่ยม และบริการระดับมืออาชีพและมีน้ำใจ เราให้บริการลูกค้าด้วยประสบการณ์การค้าและการลงทุนระดับสูงสุด และบรรลุเป้าหมายของการเพิ่มพูนความมั่งคั่ง",
   "WCGIsAlwaysYourWiseChoice": "WCG เป็นทางเลือกที่ชาญฉลาดของคุณเสมอ",
   "WCGKeepsAdvancingWithTimes": "WCG ก้าวหน้าไปตามกาลเวลา ด้วยเหตุนี้ เราจึงยืนยันที่จะลงทุนในเทคโนโลยีล่าสุด ซึ่งไม่เพียงแต่ทำให้กระบวนการเปิดและตรวจสอบบัญชีเร็วขึ้นเท่านั้น แต่ยังมอบระบบการชำระเงินที่สะดวกสำหรับการฝากและถอนเงินอีกด้วย เราใช้เทคโนโลยีการเชื่อมต่อล่าสุดเพื่อเชื่อมต่อ MT4 และผู้ให้บริการสภาพคล่องชั้นนำ เพื่อให้ลูกค้าสามารถซื้อขายได้ในขณะเดินทางและตอบสนองต่อข่าวสารและข้อมูลกิจกรรมทางการตลาดได้ทันที เพื่อให้เป็นไปตามหลักการหลักของเราคือ 'ความยุติธรรมและความยุติธรรม' เรารับรองว่าการทำธุรกรรมทั้งหมดของลูกค้าจะดำเนินการโดยอัตโนมัติ ในขณะเดียวกัน เรายังให้ความสำคัญกับประสบการณ์การซื้อขายของลูกค้าเป็นอย่างมาก ทีมผู้เชี่ยวชาญขนาดใหญ่ของ WCG จะให้บริการลูกค้าแบบตัวต่อตัวได้ตลอดเวลา เพื่อให้คุณสามารถเพลิดเพลินกับสภาพแวดล้อมการซื้อขายที่ดีที่สุดในโลก",
   "goToThePlatformToDownload": "ไปที่แพลตฟอร์มเพื่อดาวน์โหลด",
@@ -27,7 +27,7 @@
   "qualityService": "บริการที่มีคุณภาพ",
   "ourSalesTeam": "ทีมขายและทีมสนับสนุนลูกค้าของเราได้รับการฝึกอบรมอย่างมืออาชีพ และมุ่งมั่นที่จะมอบประสบการณ์การซื้อขายที่ดีที่สุดให้กับคุณ",
   "licenseIntroduction": "การแนะนำใบอนุญาต",
-  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd จดทะเบียนภายใต้กฎหมายธุรกิจระหว่างประเทศและควบคุมโดย Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) โดยมีหมายเลขทะเบียน 26087 BC 2020 Saint Vincent and the Grenadines Golden FSA (Financial Services Authority) เป็นหน่วยงานระดับชาติ รับผิดชอบในการจัดการและกำกับดูแลสถาบันบริการทางการเงินระหว่างประเทศและสถาบันการเงินที่ไม่ใช่ธนาคารในเซนต์วินเซนต์และเกรนาดีนส์",
-  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd อยู่ภายใต้การดูแลของ Canadian Financial Intelligence Unit (FIU) และ Canadian Financial Transaction and Reporting Analysis Center (FINTRAC) หมายเลขใบอนุญาต MSB คือ M20282836 ศูนย์วิเคราะห์ธุรกรรมและการรายงานทางการเงินของแคนาดา (FINTRAC) เป็นหน่วยข่าวกรองทางการเงินของแคนาดา ก่อตั้งขึ้นในปี 2543 เป็นหน่วยงานอิสระที่รายงานต่อรัฐมนตรีว่าการกระทรวงการคลัง และรับผิดชอบหลักในการรวบรวม วิเคราะห์ ประเมิน และเปิดเผยข้อมูลที่เกี่ยวข้องเกี่ยวกับแคนาดา อุตสาหกรรมการเงินเพื่อปกป้องเสถียรภาพและความมั่นคงทางการเงินของแคนาดา",
+  "WCGMarketsLtdIsRegistered": "WCG Group Ltd จดทะเบียนภายใต้กฎหมายธุรกิจระหว่างประเทศและควบคุมโดย Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) โดยมีหมายเลขทะเบียน 26087 BC 2020 Saint Vincent and the Grenadines Golden FSA (Financial Services Authority) เป็นหน่วยงานระดับชาติ รับผิดชอบในการจัดการและกำกับดูแลสถาบันบริการทางการเงินระหว่างประเทศและสถาบันการเงินที่ไม่ใช่ธนาคารในเซนต์วินเซนต์และเกรนาดีนส์",
+  "WCGMarketsLtdIsSupervised": "WCG Group Ltd อยู่ภายใต้การดูแลของ Canadian Financial Intelligence Unit (FIU) และ Canadian Financial Transaction and Reporting Analysis Center (FINTRAC) หมายเลขใบอนุญาต MSB คือ M20282836 ศูนย์วิเคราะห์ธุรกรรมและการรายงานทางการเงินของแคนาดา (FINTRAC) เป็นหน่วยข่าวกรองทางการเงินของแคนาดา ก่อตั้งขึ้นในปี 2543 เป็นหน่วยงานอิสระที่รายงานต่อรัฐมนตรีว่าการกระทรวงการคลัง และรับผิดชอบหลักในการรวบรวม วิเคราะห์ ประเมิน และเปิดเผยข้อมูลที่เกี่ยวข้องเกี่ยวกับแคนาดา อุตสาหกรรมการเงินเพื่อปกป้องเสถียรภาพและความมั่นคงทางการเงินของแคนาดา",
   "view": "ดู"
 }
