--- a/src/i18n/locales/th/contactUs.json
+++ b/src/i18n/locales/th/contactUs.json
@@ -43,18 +43,18 @@
   "invitedToParticipate": "เชิญร่วมงาน China Shanghai Financial Expo ครั้งที่ 16 เปิดรับสื่อสัมภาษณ์",
   "partneredWith": "ร่วมมือกับตัวแทนจำหน่ายที่ได้รับใบอนุญาตในท้องถิ่นที่มีชื่อเสียงในอินโดนีเซีย – Central Capital Futures Co., Ltd. เข้าสู่ตลาดที่ใหญ่เป็นอันดับสี่ของโลกอย่างเป็นทางการ",
   "awardedTheMostInvestorTrusted": "ได้รับรางวัลตัวแทนจำหน่ายโลหะมีค่าที่นักลงทุนไว้วางใจมากที่สุดแห่งปี",
-  "WCGMarketsLtdObtained": "WCG Markets Ltd ได้รับใบอนุญาต Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) หมายเลข 126087 BC 2020",
+  "WCGMarketsLtdObtained": "WCG Group Ltd ได้รับใบอนุญาต Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) หมายเลข 126087 BC 2020",
   "establishedMalaysia": "ก่อตั้งสำนักงานประสานงานในมาเลเซีย",
   "setUpTaiwan": "ตั้งสำนักงานประสานงานในไต้หวัน",
   "aLeaderInTheIndustry": "นาย Wu Guoqiang ผู้นำในอุตสาหกรรมเข้าร่วมกองกำลังและรับผิดชอบแผนกควบคุมและติดตามความเสี่ยง Mr. Wu สำเร็จการศึกษาระดับปริญญาโทด้านการเงินและคุณวุฒิวิชาชีพระดับสากลหลายสาขา เขาดำรงตำแหน่งหัวหน้าผู้ค้าและหัวหน้าแผนกบริหารความเสี่ยงของธนาคารระดับโลกหลายแห่ง",
-  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Markets Ltd ได้รับใบอนุญาต FINTRAC MSB ของแคนาดา หมายเลข M20282836",
+  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Group Ltd ได้รับใบอนุญาต FINTRAC MSB ของแคนาดา หมายเลข M20282836",
   "startCharityProjects": "เริ่มโครงการการกุศล มีส่วนร่วมในโครงการการกุศลด้านการศึกษาและการแพทย์ และมุ่งมั่นที่จะเป็นพลเมืององค์กรที่ดีและตอบแทนสังคม",
   "integrateAndUpdate": "ผสานรวมและปรับปรุงตราสินค้า การนำโลโก้และสโลแกนใหม่มาใช้ และเปิดตัวหน้าเว็บใหม่ที่มีหลายภาษาอย่างยิ่งใหญ่เพื่ออำนวยความสะดวกแก่นักลงทุนต่างชาติ",
   "theTradingSystem": "ระบบการซื้อขายได้รับการอัปเกรดและมีการเปิดตัวผลิตภัณฑ์ใหม่ๆ เช่น หุ้นสหรัฐฯ เป็นต้น เพื่อเพิ่มประสิทธิภาพประสบการณ์การลงทุนของลูกค้า",
   "focusingOn": "โดยมุ่งเน้นที่การศึกษาที่มีคุณภาพในชนบท เราสนับสนุนโครงการ Zhixing Book Corner 21-22 ของ Zhixing Education Foundation เป็นพิเศษ คาดว่าจะมีโรงเรียนประถมศึกษาอย่างน้อย 6 แห่ง และนักเรียนชั้นประถมศึกษาหลายพันคนสามารถได้รับประโยชน์จากโรงเรียนดังกล่าว",
   "WCGIFXEXPO": "WCG & IFX EXPO",
-  "TheStrengthOfWCGMarketsIsReconfirmed": "ความแข็งแกร่งของ WCG Markets ได้รับการยืนยันอีกครั้งว่าความสามารถในการจัดการของฟังก์ชั่นแพลตฟอร์มการซื้อขายทางอิเล็กทรอนิกส์นั้นสูงกว่าระดับมาตรฐาน และผ่านการทดสอบการประเมินและประสบความสำเร็จในโครงการที่กำหนดและขั้นตอนการประเมิน ได้รับตรา GTP Certified ของสมาคมค้าทองคำและเงิน",
-  "WCGMarketsWonTheThirdPlace": "WCG Markets คว้าอันดับที่สามในการบริจาคเพื่อการกุศลสูงสุดของบริษัทในฮ่องกงในปี 2021 รางวัลนี้เป็นเครื่องยืนยันถึงความสำเร็จด้านสวัสดิการสาธารณะที่โดดเด่นของ WCG Markets",
+  "TheStrengthOfWCGMarketsIsReconfirmed": "ความแข็งแกร่งของ WCG Group ได้รับการยืนยันอีกครั้งว่าความสามารถในการจัดการของฟังก์ชั่นแพลตฟอร์มการซื้อขายทางอิเล็กทรอนิกส์นั้นสูงกว่าระดับมาตรฐาน และผ่านการทดสอบการประเมินและประสบความสำเร็จในโครงการที่กำหนดและขั้นตอนการประเมิน ได้รับตรา GTP Certified ของสมาคมค้าทองคำและเงิน",
+  "WCGMarketsWonTheThirdPlace": "WCG Group คว้าอันดับที่สามในการบริจาคเพื่อการกุศลสูงสุดของบริษัทในฮ่องกงในปี 2021 รางวัลนี้เป็นเครื่องยืนยันถึงความสำเร็จด้านสวัสดิการสาธารณะที่โดดเด่นของ WCG Markets",
   "BusinessExpansionTechnologyUpgrade": "การขยายธุรกิจ การอัปเกรดเทคโนโลยี การซื้อเซิร์ฟเวอร์การซื้อขาย ASA เพื่อให้ลูกค้าได้รับสภาพแวดล้อมการซื้อขายที่เหนือกว่า",
-  "WCGMarketsAcquired": "WCG Markets เข้าซื้อกิจการสถาบันการเงินที่มีชื่อเสียงสองแห่ง \"Wealth Gold Group\" และ \"KUJI\" ซึ่งเป็นการวางรากฐานที่ดีสำหรับการพัฒนาในอนาคต"
+  "WCGMarketsAcquired": "WCG Group เข้าซื้อกิจการสถาบันการเงินที่มีชื่อเสียงสองแห่ง \"Wealth Gold Group\" และ \"KUJI\" ซึ่งเป็นการวางรากฐานที่ดีสำหรับการพัฒนาในอนาคต"
 }
