--- a/src/i18n/locales/vi/conditions.json
+++ b/src/i18n/locales/vi/conditions.json
@@ -29,7 +29,7 @@
   "yourInformation": "thông tin của bạn",
   "inAdditionToYourObligation": "Ngoài nghĩa vụ đăng ký trở thành khách hàng của WCG, bạn đồng ý đảm bảo rằng tất cả thông tin bạn cung cấp cho WCG là đầy đủ và chính xác trong phạm vi bạn biết và tin tưởng. Bạn đồng ý thông báo cho WCG ngay lập tức về bất kỳ thay đổi nào trong thông tin bạn cung cấp, để WCG có thể cập nhật hồ sơ kịp thời và phản ánh chính xác tình hình mới nhất.",
   "companyInformation": "thông tin công ty",
-  "WCGInternational": "WCG Markets Ltd",
+  "WCGInternational": "WCG Group Ltd",
   "disputeSettlement": "Giải quyết tranh chấp",
   "weWelcomeYourInvaluableComments": "Chúng tôi hoan nghênh những ý kiến ​​đóng góp vô giá của bạn. Nếu bạn nghĩ đến bất cứ điều gì có thể cải thiện dịch vụ của chúng tôi, vui lòng cho chúng tôi biết. Cho dù đó là một đề xuất, lời khen ngợi hay lời phàn nàn, phản hồi của bạn là chìa khóa để cải thiện sản phẩm và dịch vụ của chúng tôi.",
   "ifYouNeedAnyAssistance": "Để được hỗ trợ, vui lòng liên hệ với nhân viên chăm sóc khách hàng trực tuyến 24/24 ",
