--- a/src/i18n/locales/zh/contactUs.json
+++ b/src/i18n/locales/zh/contactUs.json
@@ -43,18 +43,18 @@
   "invitedToParticipate": "受邀參加第十六屆中國上海理財博覽會，接受媒體專訪",
   "partneredWith": "夥拍印度尼西亞當地知名持牌交易商 – 中央資本期貨有限公司，正式邁進全球第四大市場",
   "awardedTheMostInvestorTrusted": "榮膺年度最具投資者信賴貴金屬交易商",
-  "WCGMarketsLtdObtained": "WCG Markets Ltd取得聖文森特和格林納丁斯金融服務管理局（SVGFSA）牌照，號碼為126087 BC 2020",
+  "WCGMarketsLtdObtained": "WCG Group Ltd取得聖文森特和格林納丁斯金融服務管理局（SVGFSA）牌照，號碼為126087 BC 2020",
   "establishedMalaysia": "設立馬來西亞聯絡處",
   "setUpTaiwan": "設立台灣聯絡處",
   "aLeaderInTheIndustry": "業界翹楚吳國強先生強勢加盟，負責風控及監控部門。吳先生擁有財務碩士學位及多項國際專業資格，歷任多家世界級銀行首席交易員和風險管理部主管",
-  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Markets Ltd取得拿大FINTRAC MSB牌照，號碼為 M20282836",
+  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Group Ltd取得拿大FINTRAC MSB牌照，號碼為 M20282836",
   "startCharityProjects": "啟動慈善項目，積極參與教育及醫療慈善項目，致力成為良好企業公民，回饋社會",
   "integrateAndUpdate": "整合及更新品牌。采用全新標志和標語，也隆重推出全新網頁，具備多國語言，便利國際投資者",
   "theTradingSystem": "交易系統升級，推出更多新產品，如美股等，優化客戶的投資體驗",
   "focusingOn": "心系鄉村素質教育，特讚助知行教育基金會 21-22 年度知行圖書角項目，預計最少有6所小學，數以千計的小學生可因此獲益",
   "WCGIFXEXPO": "WCG & IFX EXPO 國際環球金融展覽",
-  "TheStrengthOfWCGMarketsIsReconfirmed": "WCG Markets 實力再被確認電子交易平台功能的管理能力均在標準以上的水準， 並通過考核測試，順利完成指定項目及考核程式。獲金銀業貿易場GTP Certified徽章。",
-  "WCGMarketsWonTheThirdPlace": "WCG Markets 獲得2021年度香港公司最高慈善捐款第三名的殊榮，這項榮譽，是對WCG Markets 出色的公益成果的充分肯定。",
+  "TheStrengthOfWCGMarketsIsReconfirmed": "WCG Group 實力再被確認電子交易平台功能的管理能力均在標準以上的水準， 並通過考核測試，順利完成指定項目及考核程式。獲金銀業貿易場GTP Certified徽章。",
+  "WCGMarketsWonTheThirdPlace": "WCG Group 獲得2021年度香港公司最高慈善捐款第三名的殊榮，這項榮譽，是對WCG Group 出色的公益成果的充分肯定。",
   "BusinessExpansionTechnologyUpgrade": "業務再擴張，技術升級，收購ASA交易伺服器，為客戶提供更優越的交易環境。",
-  "WCGMarketsAcquired": "WCG Markets 收購兩大知名金融機構”盈富Wealth Gold Group”及”酷極KUJI”，為未來發展奠下良好基礎。"
+  "WCGMarketsAcquired": "WCG Group 收購兩大知名金融機構”盈富Wealth Gold Group”及”酷極KUJI”，為未來發展奠下良好基礎。"
 }
