--- a/src/i18n/locales/ar/questions.json
+++ b/src/i18n/locales/ar/questions.json
@@ -3,8 +3,8 @@
   "thisArticleCollects": "إن هذه المقالة تجمع معظم الأسئلة التي يطرحها المستثمرون كثيرًا، ونأمل أن تجد هذه الإجابات مفيدة",
   "whatKindOfSupervision": "ما هو نوع الإشراف الذي تخضع له WCG ?",
   "WCGIsABusinessBrand": "WCG هي علامة تجارية تجارية تستخدمها العديد من الشركات ، بما في ذلك",
-  "WCGMarketsLtdIsSupervised": "يشرف على WCG Markets Ltd وحدة الاستخبارات المالية الكندية (FIU) والمركز الكندي لتحليل المعاملات المالية والتقارير (FINTRAC). رقم ترخيص MSB هو M20282836.",
-  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd مسجلة بموجب قانون الأعمال الدولي وتخضع لرقابة هيئة الخدمات المالية في سانت فنسنت وجزر غرينادين (SVGFSA) ، برقم 26087 قبل الميلاد 2020.",
+  "WCGMarketsLtdIsSupervised": "يشرف على WCG Group Ltd وحدة الاستخبارات المالية الكندية (FIU) والمركز الكندي لتحليل المعاملات المالية والتقارير (FINTRAC). رقم ترخيص MSB هو M20282836.",
+  "WCGMarketsLtdIsRegistered": "WCG Group Ltd مسجلة بموجب قانون الأعمال الدولي وتخضع لرقابة هيئة الخدمات المالية في سانت فنسنت وجزر غرينادين (SVGFSA) ، برقم 26087 قبل الميلاد 2020.",
   "HowToOpenAnAccountInWCG": "كيفية فتح حساب في WCG?",
   "youCanRegisterYourRealAccount": "يمكنك تسجيل حسابك الحقيقي على الموقع الرسمي لـ WCG، أو انقر هنا للتسجيل",
   "WCGAccountOpeningAge": "سن فتح حساب WCG",
