--- a/src/i18n/locales/id/contactUs.json
+++ b/src/i18n/locales/id/contactUs.json
@@ -43,18 +43,18 @@
   "invitedToParticipate": "Diundang untuk berpartisipasi dalam China Shanghai Financial Expo ke-16, menerima wawancara media.",
   "partneredWith": "Bermitra dengan dealer berlisensi lokal ternama di Indonesia – Central Capital Futures Co., Ltd., secara resmi memasuki pasar terbesar keempat di dunia.",
   "awardedTheMostInvestorTrusted": "Dianugerahi sebagai Dealer Logam Mulia Terpercaya Tahun Ini.",
-  "WCGMarketsLtdObtained": "WCG Markets Ltd memperoleh lisensi Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) dengan nomor 126087 BC 2020.",
+  "WCGMarketsLtdObtained": "WCG Group Ltd memperoleh lisensi Saint Vincent and the Grenadines Financial Services Authority (SVGFSA) dengan nomor 126087 BC 2020.",
   "establishedMalaysia": "Mendirikan Kantor Penghubung Malaysia.",
   "setUpTaiwan": "Mendirikan Kantor Penghubung Taiwan.",
   "aLeaderInTheIndustry": "Tuan Wu Guoqiang, seorang pemimpin dalam industri ini, bergabung dan bertanggung jawab atas departemen pengendalian dan pemantauan risiko. Mr. Wu memiliki gelar master di bidang keuangan dan sejumlah kualifikasi profesional internasional. Dia telah menjabat sebagai kepala pedagang dan kepala departemen manajemen risiko di banyak bank kelas dunia.",
-  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Markets Ltd memperoleh lisensi FINTRAC MSB Kanada, nomornya M20282836.",
+  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Group Ltd memperoleh lisensi FINTRAC MSB Kanada, nomornya M20282836.",
   "startCharityProjects": "Mulai proyek amal, berpartisipasi aktif dalam proyek amal pendidikan dan medis, dan berusaha untuk menjadi warga korporat yang baik dan memberikan kembali kepada masyarakat.",
   "integrateAndUpdate": "Integrasikan dan perbarui merek. Mengadopsi logo dan slogan baru, dan juga meluncurkan halaman web baru dengan berbagai bahasa untuk memfasilitasi investor internasional.",
   "theTradingSystem": "Sistem perdagangan ditingkatkan, dan lebih banyak produk baru diluncurkan, seperti saham AS, mata uang kripto, dll., untuk mengoptimalkan pengalaman investasi pelanggan.",
   "focusingOn": "Berfokus pada pendidikan berkualitas pedesaan, kami secara khusus mensponsori Proyek Pojok Buku Zhixing Education Foundation 21-22. Diperkirakan setidaknya akan ada 6 SD dan ribuan siswa SD bisa merasakan manfaatnya.",
   "WCGIFXEXPO": "WCG & IFX EXPO",
-  "TheStrengthOfWCGMarketsIsReconfirmed": "Kekuatan WCG Markets ditegaskan kembali bahwa kemampuan manajemen fungsi platform perdagangan elektronik berada di atas tingkat standar, dan telah lulus uji penilaian dan berhasil menyelesaikan proyek yang ditunjuk dan prosedur penilaian. Memperoleh lencana Bersertifikat GTP dari Asosiasi Perdagangan Emas dan Perak.",
-  "WCGMarketsWonTheThirdPlace": "WCG Markets memenangkan tempat ketiga dalam donasi amal tertinggi dari sebuah perusahaan Hong Kong pada tahun 2021. Kehormatan ini merupakan penegasan penuh atas pencapaian kesejahteraan publik yang luar biasa dari WCG Markets.",
+  "TheStrengthOfWCGMarketsIsReconfirmed": "Kekuatan WCG Group ditegaskan kembali bahwa kemampuan manajemen fungsi platform perdagangan elektronik berada di atas tingkat standar, dan telah lulus uji penilaian dan berhasil menyelesaikan proyek yang ditunjuk dan prosedur penilaian. Memperoleh lencana Bersertifikat GTP dari Asosiasi Perdagangan Emas dan Perak.",
+  "WCGMarketsWonTheThirdPlace": "WCG Group memenangkan tempat ketiga dalam donasi amal tertinggi dari sebuah perusahaan Hong Kong pada tahun 2021. Kehormatan ini merupakan penegasan penuh atas pencapaian kesejahteraan publik yang luar biasa dari WCG Markets.",
   "BusinessExpansionTechnologyUpgrade": "Ekspansi bisnis, peningkatan teknologi, akuisisi server perdagangan ASA, untuk memberi pelanggan lingkungan perdagangan yang lebih unggul.",
-  "WCGMarketsAcquired": "WCG Markets mengakuisisi dua lembaga keuangan terkenal \"Wealth Gold Group\" dan \"KUJI\", meletakkan dasar yang baik untuk pengembangan di masa depan."
+  "WCGMarketsAcquired": "WCG Group mengakuisisi dua lembaga keuangan terkenal \"Wealth Gold Group\" dan \"KUJI\", meletakkan dasar yang baik untuk pengembangan di masa depan."
 }
