--- a/src/i18n/locales/id/notice.json
+++ b/src/i18n/locales/id/notice.json
@@ -14,7 +14,7 @@
   "handlingMethod": "Metode penanganan",
   "ifTheAccount": "Jika akun dipastikan diperdagangkan dengan transaksi tidak normal, perusahaan akan segera membekukan akun, semua penyetoran dan penarikan akan dilarang sampai penyelidikan selesai.",
   "ifTheAccountIs": "Jika akun dipastikan memiliki transaksi tidak normal, perusahaan akan menutup akun dan mengembalikan sisa dana kepada pelanggan, keuntungan dan komisi yang timbul dari transaksi tidak normal akan dibatalkan. ＊ Hak untuk menafsirkan \"transaksi abnormal\" dimiliki oleh Wenchuan International Co., Ltd. dan jika ada perselisihan, keputusan Wenchuan International bersifat final.",
-  "theRightToInterpret": "Hak untuk menafsirkan “transaksi abnormal” dimiliki oleh WCG Markets Ltd. dan jika ada perselisihan, WCG Markets Ltd berhak untuk mengubahnya.",
+  "theRightToInterpret": "Hak untuk menafsirkan “transaksi abnormal” dimiliki oleh WCG Group Ltd. dan jika ada perselisihan, WCG Group Ltd berhak untuk mengubahnya.",
   "tradeDetails": "Detail Perdagangan",
   "sourceOfTradeExecution": "Sumber Eksekusi Perdagangan",
   "theQuotesOfOur": "Kutipan produk kami umumnya berasal dari sejumlah Bank top dunia yang menawarkan harga yang substansial dan paling tepat waktu untuk pasar kepada kami. Kami sangat percaya bahwa pendekatan ini akan selalu memberi Anda harga terbaik yang tersedia.",
