--- a/src/i18n/locales/id/questions.json
+++ b/src/i18n/locales/id/questions.json
@@ -3,8 +3,8 @@
   "thisArticleCollects": "Artikel ini mengumpulkan sebagian besar pertanyaan yang sering ditanyakan investor, dan semoga jawaban tersebut bermanfaat bagi Anda.",
   "whatKindOfSupervision": "Pengawasan seperti apa yang diatur WCG?",
   "WCGIsABusinessBrand": "WCG adalah merek bisnis yang digunakan oleh banyak perusahaan, termasuk",
-  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd diawasi oleh Unit Intelijen Keuangan Kanada (FIU) dan Pusat Analisis Transaksi dan Pelaporan Keuangan Kanada (FINTRAC). Nomor lisensi MSB adalah M20282836.",
-  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd terdaftar di bawah Hukum Bisnis Internasional dan diatur oleh Saint Vincent dan Otoritas Jasa Keuangan Grenadines (SVGFSA), bernomor 26087 SM 2020.",
+  "WCGMarketsLtdIsSupervised": "WCG Group Ltd diawasi oleh Unit Intelijen Keuangan Kanada (FIU) dan Pusat Analisis Transaksi dan Pelaporan Keuangan Kanada (FINTRAC). Nomor lisensi MSB adalah M20282836.",
+  "WCGMarketsLtdIsRegistered": "WCG Group Ltd terdaftar di bawah Hukum Bisnis Internasional dan diatur oleh Saint Vincent dan Otoritas Jasa Keuangan Grenadines (SVGFSA), bernomor 26087 SM 2020.",
   "HowToOpenAnAccountInWCG": "Bagaimana cara membuka akun di WCG?",
   "youCanRegisterYourRealAccount": "Anda dapat mendaftarkan akun riil Anda di situs resmi WCG, atau klik di sini untuk mendaftar.",
   "WCGAccountOpeningAge": "Usia pembukaan akun WCG",
