--- a/src/i18n/locales/vi/contactUs.json
+++ b/src/i18n/locales/vi/contactUs.json
@@ -43,18 +43,18 @@
   "invitedToParticipate": "Được mời tham gia Triển lãm tài chính Thượng Hải Trung Quốc lần thứ 16, chấp nhận các cuộc phỏng vấn của giới truyền thông.",
   "partneredWith": "Hợp tác với một đại lý địa phương nổi tiếng được cấp phép tại Indonesia – Central Capital Futures Co., Ltd., chính thức bước vào thị trường lớn thứ tư trên thế giới.",
   "awardedTheMostInvestorTrusted": "Được trao giải Đại lý kim loại quý đáng tin cậy nhất của nhà đầu tư trong năm.",
-  "WCGMarketsLtdObtained": "WCG Markets Ltd đã nhận được giấy phép của Cơ quan Dịch vụ Tài chính Saint Vincent và Grenadines (SVGFSA) với số 126087 BC 2020.",
+  "WCGMarketsLtdObtained": "WCG Group Ltd đã nhận được giấy phép của Cơ quan Dịch vụ Tài chính Saint Vincent và Grenadines (SVGFSA) với số 126087 BC 2020.",
   "establishedMalaysia": "Thành lập Văn phòng Liên lạc Malaysia.",
   "setUpTaiwan": "Thiết lập Văn phòng Liên lạc Đài Loan.",
   "aLeaderInTheIndustry": "Ông Wu Guoqiang, một nhà lãnh đạo trong ngành, đã gia nhập lực lượng và chịu trách nhiệm về bộ phận giám sát và kiểm soát rủi ro. Ông Wu có bằng thạc sĩ tài chính và một số bằng cấp chuyên nghiệp quốc tế. Ông từng là trưởng phòng kinh doanh và trưởng phòng quản lý rủi ro của nhiều ngân hàng tầm cỡ thế giới.",
-  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Markets Ltd đã nhận được giấy phép FINTRAC MSB của Canada, số là M20282836.",
+  "WCGMarketsLtdObtainedTheFINTRAC": "WCG Group Ltd đã nhận được giấy phép FINTRAC MSB của Canada, số là M20282836.",
   "startCharityProjects": "Bắt đầu các dự án từ thiện, tích cực tham gia các dự án từ thiện về giáo dục và y tế, đồng thời cố gắng trở thành một công dân doanh nghiệp tốt và cống hiến cho xã hội.",
   "integrateAndUpdate": "Tích hợp và cập nhật thương hiệu. Thông qua logo và khẩu hiệu mới, đồng thời khai trương trang web mới với nhiều ngôn ngữ để tạo điều kiện thuận lợi cho các nhà đầu tư quốc tế.",
   "theTradingSystem": "Nâng cấp hệ thống giao dịch, ra mắt thêm nhiều sản phẩm mới như chứng khoán Mỹ, tiền điện tử… nhằm tối ưu hóa trải nghiệm đầu tư của khách hàng.",
   "focusingOn": "Tập trung vào giáo dục chất lượng ở nông thôn, chúng tôi đặc biệt tài trợ cho Dự án Góc sách Zhixing 21-22 của Quỹ Giáo dục Zhixing. Ước tính sẽ có ít nhất 6 trường tiểu học và hàng nghìn học sinh tiểu học được hưởng lợi.",
   "WCGIFXEXPO": "WCG & IFX EXPO",
-  "TheStrengthOfWCGMarketsIsReconfirmed": "Sức mạnh của WCG Markets được xác nhận lại rằng khả năng quản lý của các chức năng của nền tảng giao dịch điện tử đều ở trên mức tiêu chuẩn, đồng thời nó đã vượt qua bài kiểm tra đánh giá và hoàn thành thành công các dự án và quy trình đánh giá được chỉ định. Đạt huy hiệu GTP Certified của Hiệp hội kinh doanh vàng bạc đá quý.",
-  "WCGMarketsWonTheThirdPlace": "WCG Markets đã giành vị trí thứ ba trong cuộc quyên góp từ thiện cao nhất của một công ty Hồng Kông vào năm 2021. Vinh dự này là sự khẳng định đầy đủ cho những thành tựu phúc lợi công cộng xuất sắc của WCG Markets.",
+  "TheStrengthOfWCGMarketsIsReconfirmed": "Sức mạnh của WCG Group được xác nhận lại rằng khả năng quản lý của các chức năng của nền tảng giao dịch điện tử đều ở trên mức tiêu chuẩn, đồng thời nó đã vượt qua bài kiểm tra đánh giá và hoàn thành thành công các dự án và quy trình đánh giá được chỉ định. Đạt huy hiệu GTP Certified của Hiệp hội kinh doanh vàng bạc đá quý.",
+  "WCGMarketsWonTheThirdPlace": "WCG Group đã giành vị trí thứ ba trong cuộc quyên góp từ thiện cao nhất của một công ty Hồng Kông vào năm 2021. Vinh dự này là sự khẳng định đầy đủ cho những thành tựu phúc lợi công cộng xuất sắc của WCG Markets.",
   "BusinessExpansionTechnologyUpgrade": "Mở rộng kinh doanh, nâng cấp công nghệ, mua lại máy chủ giao dịch ASA để cung cấp cho khách hàng một môi trường giao dịch ưu việt hơn.",
-  "WCGMarketsAcquired": "WCG Markets đã mua lại hai tổ chức tài chính nổi tiếng \"Wealth Gold Group\" và \"KUJI\", tạo nền tảng tốt cho sự phát triển trong tương lai."
+  "WCGMarketsAcquired": "WCG Group đã mua lại hai tổ chức tài chính nổi tiếng \"Wealth Gold Group\" và \"KUJI\", tạo nền tảng tốt cho sự phát triển trong tương lai."
 }
