--- a/src/i18n/locales/vi/questions.json
+++ b/src/i18n/locales/vi/questions.json
@@ -3,8 +3,8 @@
   "thisArticleCollects": "Bài viết này thu thập hầu hết các câu hỏi mà các nhà đầu tư thường hỏi, và hy vọng bạn có thể tìm thấy những câu trả lời hữu ích.",
   "whatKindOfSupervision": "WCG được quy định về loại giám sát nào?",
   "WCGIsABusinessBrand": "WCG là thương hiệu kinh doanh được nhiều công ty sử dụng, bao gồm",
-  "WCGMarketsLtdIsSupervised": "WCG Markets Ltd được giám sát bởi Đơn vị Tình báo Tài chính Canada (FIU) và Trung tâm Phân tích Báo cáo và Giao dịch Tài chính Canada (FINTRAC). Số giấy phép MSB là M20282836.",
-  "WCGMarketsLtdIsRegistered": "WCG Markets Ltd được đăng ký theo Luật Kinh doanh Quốc tế và được điều chỉnh bởi Saint Vincent và Cơ quan Dịch vụ Tài chính Grenadines (SVGFSA), được đánh số là 26087 BC 2020.",
+  "WCGMarketsLtdIsSupervised": "WCG Group Ltd được giám sát bởi Đơn vị Tình báo Tài chính Canada (FIU) và Trung tâm Phân tích Báo cáo và Giao dịch Tài chính Canada (FINTRAC). Số giấy phép MSB là M20282836.",
+  "WCGMarketsLtdIsRegistered": "WCG Group Ltd được đăng ký theo Luật Kinh doanh Quốc tế và được điều chỉnh bởi Saint Vincent và Cơ quan Dịch vụ Tài chính Grenadines (SVGFSA), được đánh số là 26087 BC 2020.",
   "HowToOpenAnAccountInWCG": "Làm thế nào để mở một tài khoản trong WCG?",
   "youCanRegisterYourRealAccount": "Bạn có thể đăng ký tài khoản thực của mình trên trang web chính thức của WCG, hoặc nhấp vào đây để đăng ký.",
   "WCGAccountOpeningAge": "Tuổi mở tài khoản WCG",
